--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <title>J. Knowles Enterprises, LLC</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <h1>J. Knowles Enterprises, LLC</h1>
+
+            <ul>
+                <li>Get To Know</li>
+                <li>Experience and Projects</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="getToKnow">
+
+        </section>
+
+        <section id="experienceProjects">
+
+        </section>
+
+        <section id="contact">
+
+        </section>
+    </main>
     
 </body>
 </html>
