--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="background">
             <h1>J. Knowles Enterprises, LLC</h1>
 
             <ul>
