--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <link href="index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="background">
+    <header class="background">
+        <nav>
             <h1>J. Knowles Enterprises, LLC</h1>
 
             <ul>
-                <li>Get To Know</li>
-                <li>Experience and Projects</li>
-                <li>Contact</li>
+                <li> <a #="Who We Are">Who We Are</a></li>
+                <li> <a #="experienceProjects">Experience & Projects</a></li>
+                <li> <a #="contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="getToKnow">
-
+        <section id="whoWeAre">
+            <h1>Who We Are</h1>
         </section>
 
         <section id="experienceProjects">
-
+            <h1>Experience & Projects</h1>
         </section>
 
         <section id="contact">
-
+            <h1>Contact Us</h1>
         </section>
     </main>
     
