updated word spacing

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <h1>J. Knowles Enterprises, LLC</h1>
 
             <ul>
-                <li> <a #="Who We Are">Who We Are</a></li>
-                <li> <a #="experienceProjects">Experience & Projects</a></li>
+                <li class="whoWeAre"> <a #="Who We Are">Who We Are</a></li>
+                <li class="xp"> <a #="experienceProjects">Experience & Projects</a></li>
                 <li> <a #="contact">Contact</a></li>
             </ul>
         </nav>
