--- a/index.html
+++ b/index.html
@@ -21,15 +21,21 @@
 
     <main>
         <section id="whoWeAre">
-            <h1>Who We Are</h1>
+            <h2>Who We Are</h2>
         </section>
 
         <section id="experienceProjects">
-            <h1>Experience & Projects</h1>
+            <h2>Experience & Projects</h2>
         </section>
 
         <section id="contact">
-            <h1>Contact Us</h1>
+            <h2>Contact Us</h2>
+                <p>Email:</p>
+                <p>Phone:</p>
+                <!-- <h3>Social Media</h3>
+                <p>Facebook</p>
+                <p>Instagram</p> -->
+
         </section>
     </main>
     
