--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <main>
         <section id="whoWeAre">
             <h2>Who We Are</h2>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
         </section>
 
         <section id="experienceProjects">
