html and css updates

--- a/index.html
+++ b/index.html
@@ -26,15 +26,12 @@
             <p>Test</p>
             <p>Test</p>
             <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
-            <p>Test</p>
+            <!-- <img src="./images/wood.jpg"> -->
         </section>
 
         <section id="experienceProjects">
             <h2>Experience & Projects</h2>
+                
         </section>
 
         <section id="contact">
