--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
         <section id="experienceProjects">
             <h2>Experience & Projects</h2>
-                
+            <h4>Befor</h4>
+                <img src="images/deckOne.jpg">
+            <h4>After</h4>
+                <img src="images/deckTwo.jpg">
         </section>
 
         <section id="contact">
