updated html and css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <section id="whoWeAre">
-            <h2>Who We Are</h2>
+            <h1 class="wwa">Who We Are</h1>
             <p>Test</p>
             <p>Test</p>
             <p>Test</p>
@@ -30,17 +30,25 @@
         </section>
 
         <section id="experienceProjects">
-            <h2>Experience & Projects</h2>
-            <h4>Befor</h4>
-                <img src="images/deckOne.jpg">
-            <h4>After</h4>
+            <h1 class="xp">Experience & Projects</h1>
+
+            <h2>Before</h2>
+            <div class="deckOne">
+                    <img src="images/deckOne.jpg">
+                    <p class="deckOneInfo">Deck that had old wood, and was starting to droup.</p>
+            </div>
+
+            <h2>After</h2>
+            <div class="deckTwo">
                 <img src="images/deckTwo.jpg">
+                <p class="deckTwoInfo">Fixed up in about 2 days.</p>
+            </div>
         </section>
 
         <section id="contact">
-            <h2>Contact Us</h2>
-                <p>Email:</p>
-                <p>Phone:</p>
+            <h1 class="con">Contact Us</h1>
+                <h2>Email:</h2>
+                <h2>Phone:</h2>
                 <!-- <h3>Social Media</h3>
                 <p>Facebook</p>
                 <p>Instagram</p> -->
