--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <header class="background">
+    <header class="header">
         <nav>
             <h1>J. Knowles Enterprises, LLC</h1>
 
