--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1>J. Knowles Enterprises, LLC</h1>
 
             <ul>
-                <li class="whoWeAre"> <a #="Who We Are">Who We Are</a></li>
-                <li class="xp"> <a #="experienceProjects">Experience & Projects</a></li>
-                <li> <a #="contact">Contact</a></li>
+                <li class="whoWeAre"> <a href=#whoWeAre>Who We Are</a></li>
+                <li class="xp"> <a href=#experienceProjects>Experience & Projects</a></li>
+                <li> <a href=#contact>Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -22,6 +22,15 @@
     <main>
         <section id="whoWeAre">
             <h1 class="wwa">Who We Are</h1>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
+            <p>Test</p>
             <p>Test</p>
             <p>Test</p>
             <p>Test</p>
